# trello-task-manager-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  QWEN.md  README.md  pyproject.toml
trello_tm/: feedback_launcher.py  feedback_ui.py  jira_task_service.py  main_cli.py  service_config.py  service_types.py  task_service.py  task_service_factory.py  trello_task_manager.py  trello_task_service.py
